--- a/GSG_Induction_Managing_your_career.Rmd
+++ b/GSG_Induction_Managing_your_career.Rmd
@@ -50,7 +50,7 @@ Self-managed learning includes reading or completing e-learning. This can form a
 
 ## Group learning
 
-Being part of a group or cross functional team like a working group allows you to engage with communities of practice and network and learn from others. Look for opportunities to be part of relevant groups or task-forces to give exposure to working with different teams and learning new skills.
+Being part of a group or cross functional team, like a working group, allows you to engage with communities of practice and network and learn from others. Look for opportunities to be part of relevant groups or task-forces to give exposure to working with different teams and learning new skills.
 
 ## Tutor-led training
 
