--- a/GSG_Induction_Managing_your_career.Rmd
+++ b/GSG_Induction_Managing_your_career.Rmd
@@ -38,6 +38,12 @@ A third party will give feeback a comprehensive development report based on the 
 
 You should have regular development chats with your line manager. These should focus on both developing and improving skills and behaviours needed for your current post and development needs for future posts and progression. Ensure you are prepared for these conversations by reviewing your Personal Development Plan and your own self-identified needs.
 
+## Mentoring
+
+A mentor is defined in the Oxford Dictionary as an “experienced and trusted adviser”. A mentor can be useful at different stages in your career and these relationships can be short-term or long-term.  A mentor does not have direct responsibility for your work and often works outside your team, division or even department. A mentor can be useful for helping you to identify and work towards your own objectives, develop wider skills needed for progression or help with a  particularly tricky scenario in your career.  A mentor can be particularly useful if your line manager is in a different profession to you.
+
+Some departments have mentor programmes you can sign up for. If not, speak to your line manager or Head of Profession if you think a mentor could be useful for you. In time you may feel you want to mentor someone yourself and this can be a very rewarding opportunity. 
+
 # Learning
 
 ## On the job learning
